--- a/contas-front-angular/src/index.html
+++ b/contas-front-angular/src/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar navbar-dark bg-dark">
     <div class="d-flex justify-content-center text-uppercase mx-auto">
-      <b class="text-warning">Catálogo de Peças ZEN</b>
+      <b class="text-warning">Contas a Pagar</b>
     </div>    
   </nav>
   
